feat: add update permission api
